@@ -30,4 +30,5 @@ Fixed #2169 Add handling for blank secrets
 Fixed #2176 `clean_bundles`, `optimize`, and `empty_trash` not working as global attributes
 Fixed #2186 `total_runtime` will now trigger an overlay update
 Fixed #2195 an image on the docs was a dead link
+Fixes sort order of resolution collections
 Various other Minor Fixes
